[project]
name = "poker-ne-streamlit"
version = "0.1.0"
description = "poker-ne-streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.3",
]
